syntax = "proto3";

package server;

option go_package = "github.com/watariRyo/balance/server/proto";

message UserTagListRequest {
    string user_id = 1;
}

message UserTagListResponse {
    repeated UserTagResponse user_tag_list = 1;
}

message UserTagRequest {
    int64 id = 1;
    string user_id = 2;
    string tag_name = 3;
    int64 group_id = 4;
    string grant_limit = 5;
}

message UserTagResponse {
    int64 id = 1;
    string user_id = 2;
    string tag_name = 3;
    int64 group_id = 4;
    string grant_limit = 5;
}

message UserTagID {
    int64 id = 1;
    string user_id = 2;
}


service IncomeAndExpenditureService {
    rpc ListUserTag (UserTagListRequest) returns (UserTagRequest);
    rpc GetUserTag (UserTagID) returns (UserTagListResponse);
    rpc RegisterUserTag (UserTagRequest) returns (UserTagListResponse);
    rpc UpdateIncomeAndExpenditure (UserTagRequest) returns (UserTagListResponse);
    rpc DeleteIncomeAndExpenditure (UserTagID) returns (UserTagID);
}